Adjust users controller and partials to work with file changes

--- a/views/partials/chart.ejs
+++ b/views/partials/chart.ejs
@@ -2,10 +2,14 @@
   <div class="row">
     <div class="col-desktop-12">
       <section class="o-pane--yellow">
-        <header><span class="o-pane__dot"></span>
+        <header>
+          <span class="o-pane__dot"></span>
           <h2>Overview</h2>
         </header>
-        <nav><a class="is-active purchase">Purchase<br>Intent</a><a class="is-active favorability">Brand<br>Favorability</a></nav>
+        <nav>
+          <a class="is-active purchase">Purchase<br>Intent</a>
+          <a class="is-active favorability">Brand<br>Favorability</a>
+        </nav>
         <div class="o-pane__contents">
           <div class="row">
             <div class="right">
@@ -16,7 +20,8 @@
               </select>
             </div>
           </div>
-          <canvas id="overview-graph"></canvas>
+          <canvas id="overview-graph">
+          </canvas>
         </div>
       </section>
     </div>
@@ -24,7 +29,8 @@
   <div class="row">
     <div class="col-desktop-small">
       <section class="o-pane--blue match-heights">
-        <header><span class="o-pane__dot"></span>
+        <header>
+          <span class="o-pane__dot"></span>
           <h2>Analytics</h2>
         </header>
         <div class="o-pane__contents">
@@ -35,12 +41,14 @@
     </div>
     <div class="col-desktop-large">
       <section class="o-pane--green match-heights">
-        <header><span class="o-pane__dot"></span>
+        <header>
+          <span class="o-pane__dot"></span>
           <h2>Trends</h2>
         </header>
         <div class="o-pane__contents">
           <div class="trends-container">
-            <canvas id="trends-graph"></canvas>
+            <canvas id="trends-graph">
+            </canvas>
           </div>
           <p class="center">Ut enim ad minim veniam, quis nostrud exercitation</p>
         </div>
