--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,9 +1,15 @@
 <div class="col-desktop-3">
   <nav class="o-menu"><a class="o-menu__logo" href="/"><img class="block" src="/dist/assets/images/logo.png" alt="Content Intent Logo"></a>
     <ul class="o-menu__links">
-      <li><a class="is-active" href="#main">Main</a></li>
-      <li><a href="#analytics">Analytics History</a></li>
-      <li><a href="#report">New Report</a></li>
+      <li>
+        <a class="is-active" href="#main">Main</a>
+      </li>
+      <li>
+        <a href="#analytics">Analytics History</a>
+      </li>
+      <li>
+        <a href="#report">New Report</a>
+      </li>
     </ul>
   </nav>
 </div>
