--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
         </div>
       </div>
     </div>
-    <script src="/dist/assets/javascript/main.js"></script>
+    <script src="/dist/assets/javascript/main.js">
+    </script>
   </body>
 </html>
