--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,8 @@
 <header class="o-header">
-  <h5 class="o-header__title">Welcome Back Xxxxxx</h5>
-  <div class="o-header__profile"><span>JB</span></div>
+  <h5 class="o-header__title">
+    Welcome Back Xxxxxx
+  </h5>
+  <div class="o-header__profile">
+    <span>JB</span>
+  </div>
 </header>
