--- a/views/partials/report.ejs
+++ b/views/partials/report.ejs
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-desktop-12">
       <section class="o-pane--green match-heights">
-        <header><span class="o-pane__dot"></span>
+        <header>
+          <span class="o-pane__dot"></span>
           <h2>Analytics</h2>
         </header>
         <div class="o-pane__contents">
