turn contentintent logo into its own partial

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="../dist/assets/stylesheets/main.css">
   </head>
   <body>
+    <!-- logo -->
+    <%- include('../partials/logo'); %>
     <div class="o-header__title">
-    <!-- sidenav -->
       <div class="col-desktop-8">
         <table>
           <tr>
