--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,8 +1,7 @@
 <div class="col-desktop-3">
   <nav class="o-menu">
-    <a class="o-menu__logo" href="/">
-      <img class="block" src="/dist/assets/images/logo.png" alt="Content Intent Logo">
-    </a>
+    <!-- logo -->
+    <%- include('logo'); %>
     <ul class="o-menu__links">
       <li>
         <a class="is-active" href="#main">Main</a>
