Update other files to accommodate creations

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
             <!-- chart -->
             <%- include('partials/chart'); %>
 
+            <!-- usermatch -->
+            <%- include('users/usermatch'); %>
+
             <!-- analytics -->
             <%- include('partials/analytics'); %>
 
