--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -7,6 +7,9 @@
         <a class="is-active" href="#main">Main</a>
       </li>
       <li>
+        <a href="#users">Users</a>
+      </li>
+      <li>
         <a href="#analytics">Analytics History</a>
       </li>
       <li>
