--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,31 +8,18 @@
     <link rel="stylesheet" href="../dist/assets/stylesheets/main.css">
   </head>
   <body>
-    <!-- logo -->
-    <%- include('../partials/logo'); %>
-    <div class="o-header__title">
-      <div class="col-desktop-8">
-        <table>
-          <tr>
-            <th id="users">Users</th>
-          </tr>
+    <div class="col-desktop-3">
+      <nav class="o-menu">
+        <!-- logo -->
+        <%- include('../partials/logo'); %>
+        <ul class="o-menu__links">
           <% for (let user of users) { %>
-            <tr>
-              <td>
-                <a href="/users/<%=user._id%>">
-                  <%=user.name%>
-                </a>
-              </td>
-            </tr>
-            <% } %>
-          </table>
-      <!-- header -->
-      <!-- chart -->
-      <!-- analytics -->
-      <!-- report -->
-      </div>
+            <li>
+              <a href="#<%=user._id%>"><%#user.name%></a>
+            </li>
+          <% } %>
+        </ul>
+      </nav>
     </div>
-    <!-- <script src="../dist/assets/javascript/main.js">
-    </script> -->
   </body>
 </html>
