Save current setting before testing

--- a/views/sub-partials/userlinks.ejs
+++ b/views/sub-partials/userlinks.ejs
@@ -1,7 +1,7 @@
 <ul class="o-menu__links">
   <% for (let user of users) { %>
     <li>
-      <a href="#<%=user._id%>"><%=user.name%></a>
+      <a href="/users/<%=user._id%>"><%=user.name%></a>
     </li>
   <% } %>
 </ul>
