--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -8,14 +8,14 @@
         </header>
         <div class="o-pane__contents">
           <a href="/users"><h1>User Index</h1></a>
-          <a href="<%#user._id%>"><h1>Find User</h1></a>
-          <a href="<%#user._id%>"><h1>New User</h1></a>
-          <a href="<%#user._id%>"><h1>Edit User</h1></a>
-          <a href="<%#user._id%>"><h1>Remove User</h1></a>
+          <a href="<%#user.id%>"><h1>Find User</h1></a>
+          <a href="<%#user.id%>"><h1>New User</h1></a>
+          <a href="<%#user.id%>"><h1>Edit User</h1></a>
+          <a href="<%#user.id%>"><h1>Remove User</h1></a>
           <!-- <ul>
             <%# for (let user of users) { %>
               <li>
-                <a href="<%#user._id%>">
+                <a href="<%#user.id%>">
                   <%#user.name%>
                 </a>
               </li>
