Add transpilers and bundlers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="theme-color" content="#1b2325">
-    <link rel="stylesheet" href="/dist/assets/stylesheets/main.css">
+    <link rel="stylesheet" href="../dist/assets/stylesheets/main.css" />
   </head>
   <body>
     <%- include('partials/svg'); %>
@@ -14,28 +14,28 @@
         <div class="row">
 
           <!-- sidenav -->
-          <%- include('partials/sidenav'); %>
+          <%# include('partials/sidenav'); %>
 
           <div class="col-desktop-8">
             <!-- header -->
-            <%- include('partials/header'); %>
+            <%# include('partials/header'); %>
 
             <!-- chart -->
-            <%- include('partials/chart'); %>
+            <%# include('partials/chart'); %>
 
             <!-- usermatch -->
-            <%- include('users/usermatch'); %>
+            <%# include('users/usermatch'); %>
 
             <!-- analytics -->
-            <%- include('partials/analytics'); %>
+            <%# include('partials/analytics'); %>
 
             <!-- report -->
-            <%- include('partials/report'); %>
+            <%# include('partials/report'); %>
           </div>
         </div>
       </div>
     </div>
-    <script src="/dist/assets/javascript/main.js">
+    <script src="../dist/assets/javascript/main.js">
     </script>
   </body>
 </html>
