--- a/views/partials/content.ejs
+++ b/views/partials/content.ejs
@@ -1,10 +1,10 @@
-<div class="tabs-target" id="analytics">
+<div class="tabs-target" id="content">
   <div class="row">
     <div class="col-desktop-12">
       <section class="o-pane--blue match-heights">
         <header>
           <span class="o-pane__dot"></span>
-          <h2>Analytics</h2>
+          <h2>Content</h2>
         </header>
         <div class="o-pane__contents">
           <h1>March 16, 2016</h1>
