--- a/views/partials/main.ejs
+++ b/views/partials/main.ejs
@@ -1,10 +1,10 @@
-<div class="tabs-target" id="report">
+<div class="tabs-target" id="main">
   <div class="row">
     <div class="col-desktop-12">
       <section class="o-pane--green match-heights">
         <header>
           <span class="o-pane__dot"></span>
-          <h2>Analytics</h2>
+          <h2>Main</h2>
         </header>
         <div class="o-pane__contents">
           <h1>A more different title</h1>
