--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -4,16 +4,16 @@
     <%- include('logo'); %>
     <ul class="o-menu__links">
       <li>
-        <a class="is-active" href="#main">Main</a>
+        <!-- Main shows links to content and users -->
+        <a class="main" href="#main">Main</a>
       </li>
       <li>
-        <a href="#users">Users</a>
+        <!-- shows user indes -->
+        <a class="users" href="#users">Users</a>
       </li>
       <li>
-        <a href="#analytics">Analytics History</a>
-      </li>
-      <li>
-        <a href="#report">New Report</a>
+        <!-- shows content index -->
+        <a class="content" href="#content">Content</a>
       </li>
     </ul>
   </nav>
