--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="o-header">
   <h5 class="o-header__title">
-    Welcome Back Xxxxxx
+    Welcome Back!
   </h5>
   <div class="o-header__profile">
     <span>JB</span>
