--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,8 @@
             <!-- header -->
             <%- include('partials/header'); %>
 
-            <!-- usermatch -->
-            <%# include('partials/main'); %>
+            <!-- main -->
+            <%- include('partials/main'); %>
 
             <!-- users index -->
             <%# include('users/index'); %>
