Add mockup link to index and customize mockup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,8 @@
 
 <body>
   <h1><%= title %></h1>
-  <p>
-    <%= title %>
-  </p>
+  <h2><a href="/mockup">Mockup</a></h2>
+  <h2><a href="https://github.com/smtlb/ContentIntentDashboard">GitHub</a></h2>
 </body>
 
 </html>
