--- a/views/mockup.ejs
+++ b/views/mockup.ejs
@@ -27,8 +27,8 @@
         </div>
         <div class="col-desktop-8">
           <header class="o-header">
-            <h5 class="o-header__title">Welcome Back Xxxxxx</h5>
-            <div class="o-header__profile"><span>JB</span></div>
+            <h5 class="o-header__title">Welcome Back <%= name %></h5>
+            <div class="o-header__profile"><span><%= initials %></span></div>
           </header>
           <div class="tabs-target is-active" id="main">
             <div class="row">
