--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,20 @@
   <title>
     <%= title %>
   </title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='../stylesheets/main.css' />
 </head>
 
 <body>
-  <h1><%= title %></h1>
-  <h2><a href="/mockup">Mockup</a></h2>
-  <h2><a href="https://github.com/smtlb/ContentIntentDashboard">GitHub</a></h2>
+  <header>
+    <a href="/">ContentIntent</a>
+  </header>
+  <hr>
+  <main>
+    <h1><%= title %></h1>
+    <h2><a href="/users">Users</a></h2>
+    <h2><a href="/mockup">Mockup</a></h2>
+    <h2><a href="https://github.com/smtlb/ContentIntentDashboard">GitHub</a></h2>
+  </main>
 </body>
 
 </html>
