--- a/views/users-view.ejs
+++ b/views/users-view.ejs
@@ -15,7 +15,7 @@
   <hr>
   <main>
     <h1><%= title %></h1>
-    <h2><%= user.name.first %></h2>
+    <h2> <%= users %> </h2>
   </main>
 </body>
 
