--- a/views/users-view.ejs
+++ b/views/users-view.ejs
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <header>
-    <a href="/">ContentIntent</a>
+  <header class="o-header">
+    <a class="o-header__title" href="/">ContentIntent</a>
   </header>
   <hr>
   <main>
