--- a/views/users-view.ejs
+++ b/views/users-view.ejs
@@ -17,7 +17,7 @@
     <h1><%= title %></h1>
     <% for (let user of users) { %>
       <a href="#">
-        <h2> <%= user.namify() %> </h2>
+        <h2> <%= user.fullName %> </h2>
       </a>
     <% } %>
   </main>
