--- a/views/mockup-view.ejs
+++ b/views/mockup-view.ejs
@@ -27,14 +27,10 @@
         </div>
         <div class="col-desktop-8">
           <header class="o-header">
-            <% for (let user of users) { %>
-              <h5 class="o-header__title"> <%= user.fullName %></h5>
+              <h5 class="o-header__title"> Jonah Bliss</h5>
               <div class="o-header__profile">
-                <a href="/<%= user.minify %>">
-                  <span><%= user.name.first[0] %></span>
-                </a>
+                  <span>J</span>
               </div>
-            <% } %>
           </header>
           <div class="tabs-target is-active" id="main">
             <div class="row">
